# TennesseeWW

./: README.md  docker-compose.yml  package-lock.json  push-to-github.cmd  push-to-github.ps1  run-local-api.ps1  tnww.sqlite
.github/workflows/: pages-static.yml
api/: Dockerfile  pyproject.toml
api/app/: main.py
api/app/core/: cache.py  config.py  logging.py
api/app/domain/: advisory.py  features.py  flow_rating.py  model_eval.py  schemas.py
api/app/providers/: dropbox_sampling.py  openmeteo.py  openmeteo_history.py  usgs_nwis_dv.py  usgs_nwis_iv.py  usgs_nwis_stats.py
api/app/routes/: forecast.py  health.py  sites.py  timeseries.py
api/app/services/: forecast_service.py  ingest_service.py
api/scripts/: export_static_api.py  ingest_once.py  validate_models.py
api/tests/: test_advisory.py  test_model_eval.py
api/tnww_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: gauges.json  models.yaml  settings.example.env  sites.json
docs/: EMBED.md  GITHUB_PAGES.md  GITHUB_REPO_SETUP_AND_ONE_CLICK_SYNC.md  MODELING.md  OPERATIONS.md
widget/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
widget/public/: embed-example.html  index.html
widget/public/static-api/v1/: forecast.json
widget/public/static-api/v1/site-chart/: browns.json  hwy70.json  (+12 more)
widget/src/: dev.tsx  index.tsx  mount.ts
widget/src/api/: client.ts  types.ts
widget/src/components/: App.tsx  Disclaimer.tsx  LastUpdated.tsx  Legend.tsx  MapView.tsx  SiteDetailsDrawer.tsx  SiteList.tsx  TimeseriesChart.tsx
widget/src/styles/: widget.css
(+14 files in other folders)
